# school_ai

./: .gitignore  LICENSE  README.md  UI.html  config.yaml  database_initalizer.py  database_initializer.py  langchain_db_query.py  main.js  main.py  pyproject.toml  style.css  test_langchain_db_query.py
tests/: test_langchain_db_query.py  test_main.py
