[tool.poetry]
name = "school-ai"
version = "0.1.0"
description = "use ai to ask questions about a school database"
authors = ["Evan DeLord <eddelord@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.0.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
faker = "^28.4.0"
langchain = "~0.2"
langchain-anthropic = "~0.1"
anthropic = "~0"
sqlalchemy = "^2.0.23"
langchain-community = "~0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
